--- a/src/ValMati.dotnet-grpc-vs-rest.dotnet31.REST/ValMati.Dotnet-grpc-vs-rest.REST.csproj
+++ b/src/ValMati.dotnet-grpc-vs-rest.dotnet31.REST/ValMati.Dotnet-grpc-vs-rest.REST.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ValMati.Dotnet-grpc-vs-rest.Controllers\ValMati.Dotnet-grpc-vs-rest.Controllers.csproj" />
+    <ProjectReference Include="..\ValMati.Dotnet-grpc-vs-rest.Domain\ValMati.Dotnet-grpc-vs-rest.Domain.csproj" />
   </ItemGroup>
 
 </Project>
