--- a/src/ValMati.DotnetGrpcVsRest.GRPC.Shared/ValMati.DotnetGrpcVsRest.GRPC.Shared.csproj
+++ b/src/ValMati.DotnetGrpcVsRest.GRPC.Shared/ValMati.DotnetGrpcVsRest.GRPC.Shared.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
@@ -14,14 +14,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ValMati.Dotnet-grpc-vs-rest.Domain\ValMati.Dotnet-grpc-vs-rest.Domain.csproj" />
   </ItemGroup>
 
 </Project>
