--- a/src/ValMati.DotnetGrpcVsRest.REST/Properties/launchSettings.json
+++ b/src/ValMati.DotnetGrpcVsRest.REST/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ValMati.dotnet_grpc_vs_rest.REST": {
+    "ValMati.DotnetGrpcVsRest.REST": {
       "commandName": "Project",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
