Fix docker-compose.yml and dockerfiles

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   rest31:
     build:
       context: .
-      dockerfile: ValMati.Dotnet-grpc-vs-rest.REST/Dockerfile31
+      dockerfile: ValMati.DotnetGrpcVsRest.REST/Dockerfile31
     image: valmati/dotnet-grpc-vs-rest.rest:3.1
     ports:
       - "9091:9091"
@@ -13,7 +13,7 @@ services:
   rest50:
     build:
       context: .
-      dockerfile: ValMati.Dotnet-grpc-vs-rest.REST/Dockerfile50
+      dockerfile: ValMati.DotnetGrpcVsRest.REST/Dockerfile50
     image: valmati/dotnet-grpc-vs-rest.rest:5.0
     ports:
       - "9092:9092"
@@ -21,7 +21,7 @@ services:
   grpc31:
     build:
       context: .
-      dockerfile: ValMati.Dotnet-grpc-vs-rest.GRPC/Dockerfile31
+      dockerfile: ValMati.DotnetGrpcVsRest.GRPC/Dockerfile31
     image: valmati/dotnet-grpc-vs-rest.grpc:3.1
     ports:
       - "9093:9093"
@@ -29,7 +29,7 @@ services:
   grpc50:
     build:
       context: .
-      dockerfile: ValMati.Dotnet-grpc-vs-rest.GRPC/Dockerfile50
+      dockerfile: ValMati.DotnetGrpcVsRest.GRPC/Dockerfile50
     image: valmati/dotnet-grpc-vs-rest.grpc:5.0
     ports:
       - "9094:9094"
