--- a/src/ValMati.DotnetGrpcVsRest.GRPC/Dockerfile31
+++ b/src/ValMati.DotnetGrpcVsRest.GRPC/Dockerfile31
@@ -1,17 +1,17 @@
 # Build
-FROM mcr.microsoft.com/dotnet/sdk:3.1-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /source
 
 COPY . .
-RUN dotnet publish -c release -o /app -f netcoreapp3.1 ValMati.Dotnet-grpc-vs-rest.GRPC/ValMati.Dotnet-grpc-vs-rest.GRPC.csproj
+RUN dotnet publish -c release -o /app -f netcoreapp3.1 ValMati.DotnetGrpcVsRest.GRPC/ValMati.DotnetGrpcVsRest.GRPC.csproj
 
 # Generate image
 FROM mcr.microsoft.com/dotnet/aspnet:3.1-alpine
 
-ENV ASPNETCORE_URLS=http://*:9093
+ENV ASPNETCORE_URLS=http://*:9091
 WORKDIR /app
 COPY --from=build /app .
 
-EXPOSE 9093
+EXPOSE 9091
  
-ENTRYPOINT [ "dotnet", "ValMati.Dotnet-grpc-vs-rest.GRPC.dll" ]
+ENTRYPOINT [ "dotnet", "ValMati.DotnetGrpcVsRest.GRPC.dll" ]
