--- a/src/ValMati.DotnetGrpcVsRest.REST/Dockerfile50
+++ b/src/ValMati.DotnetGrpcVsRest.REST/Dockerfile50
@@ -1,9 +1,9 @@
 # Build
-FROM mcr.microsoft.com/dotnet/sdk:5.0-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /source
 
 COPY . .
-RUN dotnet publish -c release -o /app -f net5.0 ValMati.Dotnet-grpc-vs-rest.REST/ValMati.Dotnet-grpc-vs-rest.REST.csproj
+RUN dotnet publish -c release -o /app -f net5.0 ValMati.DotnetGrpcVsRest.REST/ValMati.DotnetGrpcVsRest.REST.csproj
 
 # Generate image
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-alpine
@@ -14,4 +14,4 @@ COPY --from=build /app .
 
 EXPOSE 9092
  
-ENTRYPOINT [ "dotnet", "ValMati.Dotnet-grpc-vs-rest.REST.dll" ]
+ENTRYPOINT [ "dotnet", "ValMati.DotnetGrpcVsRest.REST.dll" ]
