--- a/src/ValMati.DotnetGrpcVsRest.GRPC/Properties/launchSettings.json
+++ b/src/ValMati.DotnetGrpcVsRest.GRPC/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "ValMati.Dotnet-grpc-vs-rest.GRPC": {
       "commandName": "Project",
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
+        "ASPNETCORE_URLS": "https://*:9093",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
